2023-10-16T00:42:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6527535933 # 1254
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-16
* notice: last 14d: unq all: 5 36
* notice: prev accum: outdated-unq outdated-all / unq all: 659 1038 / 685 1077
* notice: next accum: outdated-unq outdated-all / unq all: 661 1042 / 685 1078
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-10-01] / [2023-10-15]

2023-10-15T08:10:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6522894369 # 1252
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-15
* notice: last 14d: unq all: 6 38
* notice: prev accum: outdated-unq outdated-all / unq all: 659 1038 / 684 1076
* notice: next accum: outdated-unq outdated-all / unq all: 659 1038 / 685 1077
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-01 2023-10-15]

2023-10-15T00:44:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6520920994 # 1251
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-15
* notice: last 14d: unq all: 6 38
* notice: prev accum: outdated-unq outdated-all / unq all: 659 1038 / 684 1075
* notice: next accum: outdated-unq outdated-all / unq all: 659 1038 / 684 1076
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-10-14]

2023-10-14T16:10:09Z: