@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-10-16T00:42:29Z",
+  "timestamp" : "2023-10-16T08:12:50Z",
   "count_outdated" : 1042,
   "uniques_outdated" : 661,
-  "count" : 1078,
-  "uniques" : 685,
+  "count" : 1080,
+  "uniques" : 687,
   "clones" : [
     {
       "timestamp": "2023-10-02T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -121,6 +121,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-16T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
