@@ -1,10 +1,10 @@
 {
-  "count": 36,
+  "count": 37,
   "uniques": 5,
   "clones": [
     {
       "timestamp": "2023-10-02T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -66,6 +66,11 @@
       "timestamp": "2023-10-15T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-16T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
